--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,8 @@
-<h2 id="title">Welcome to Ember</h2>
+<h2 id="title">Blog</h2>
+
+<div class="">
+  <span>{{#link-to "index"}}Home{{/link-to}}</span> |
+  <span>{{#link-to "posts.index"}}Posts{{/link-to}}</span>
+</div>
 
 {{outlet}}
